@@ -5,10 +5,10 @@ geosdir = $(includedir)/geos/operation/polygonize
 EXTRA_DIST = 
 
 geos_HEADERS = \
-	EdgeRing.h	\
 	PolygonizeDirectedEdge.h	\
 	PolygonizeEdge.h	\
 	PolygonizeGraph.h	\
 	Polygonizer.h
 
-nodist_geos_HEADERS = 
+nodist_geos_HEADERS = \
+	EdgeRing.h
